--- a/src/main/webapp/customer/age_range_chart.html
+++ b/src/main/webapp/customer/age_range_chart.html
@@ -48,7 +48,10 @@
         data = google.visualization.arrayToDataTable(data);
         var options = {title:" Distribuição por Faixa Etária"}
         var typeg = $("#graphtype").val()
-        if (typeg == "1") {
+        if (typeg == "1" || typeg == "3") {
+          if (typeg == "3") {
+            options["pieHole"] = 0.5;
+          }
           var chartP = new google.visualization.PieChart(document.getElementById('chart_div'));
             chartP.draw(data, options);
         } else {
@@ -145,6 +148,7 @@
                           <select class="medium local_storage" id="graphtype" name="graphtype">
                               <option value="1">Pizza</option>
                               <option value="2">Barra</option>
+                              <option value="3">Donut</option>
                           </select>
                         </div>
                       </div>
