presume income - round + title

--- a/src/main/webapp/financial_admin/presumed_income.html
+++ b/src/main/webapp/financial_admin/presumed_income.html
@@ -146,9 +146,9 @@
           <th></th>
           <th></th>
           <th></th>
-          <th alt="Preço Venda">P Venda</th>
-          <th alt="Comissão">Comissão</th>
-          <th alt="Lucro">Lucro</th>
+          <th title="Preço da Venda">P Venda</th>
+          <th title="Comissão, mais preço de compra no caso de produto">Comissão</th>
+          <th title="Lucro">Lucro</th>
         </tr>
       </thead>
       <tbody>
