Faturado -> Produzido - account_register style='line-height: 105%

--- a/src/main/webapp/company_log/edit.html
+++ b/src/main/webapp/company_log/edit.html
@@ -53,10 +53,10 @@
 	            </div>
           	</div>
 			<div class="clearfix">
-	            <label for="showSalesToUser">Faturamento <span data-i18n='Profissional'></span></label>
+	            <label for="showSalesToUser">Produção <span data-i18n='Profissional'></span></label>
 	            <div class="input">
 	                <input id="showSalesToUser" name='showSalesToUser'>
-	              <span class="help-block">Mostra valor faturado do <span data-i18n='Profissional'></span>, além da comissão</span>
+	              <span class="help-block">Mostra valor produzido do <span data-i18n='Profissional'></span>, além da comissão</span>
 	            </div>
           	</div>
 			<div class="clearfix">
