--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -218,12 +218,12 @@
             <div class="input-prepend" style="float:left; padding-right:10px">
               <span class="add-on"><img src="/images/add.png" width="16"></span>
               <input class="small" id="credit" name="credit" size="19" placeholder="0.00" type="text">
-              <span class="help-block">Receitas</span>
+              <span class="help-block">Entradas</span>
             </div>
             <div class="input-prepend" style="float:left; padding-right:10px">
               <span class="add-on"><img src="/images/remove.png" width="16"></span>
               <input class="small" id="debit" name="debit" size="19" placeholder="0.00" type="text">
-              <span class="help-block">Despesas</span>
+              <span class="help-block">Saídas</span>
             </div>
             <div class="input-prepend" style="float:left; padding-right:10px">
               <span class="add-on"><img src="/images/money.png" width="16"></span>
