--- a/src/main/webapp/financial_admin/commission_report.html
+++ b/src/main/webapp/financial_admin/commission_report.html
@@ -282,8 +282,8 @@
             <div class="lift:SecuritySnippet.isShowSalesToUser input-prepend" style="float:left; padding-right:10px">
               <span class="add-on"><img src="/images/money.png" width="16"></span>
               <input style="color:black;" class="small disabled" id="total" name="total" size="19" placeholder="0.00" type="text" disabled='true'>
-              <span class="help-block">Total faturado</span>
-              <a href="" class="_popover_basic" rel="popover" data-content="O Total faturado pode ser maior que a soma dos serviços listados na tabela abaixo, porque serviços sem comissão são somados como faturados, apesar de não aparecerem na tabela. Fique atento também à opção relatório sintético, se a mesma estiver desmarcada o valor do serviço na tabela é replicado de acordo com a quantidade de formas de pagamento usadas pelo cliente, neste caso é provável que a soma dos serviços na tabela seja maior que o total faturado. Se a opção relatório sintético estiver marcada a forma de pagamento é omitida." data-original-title="Informação">
+              <span class="help-block">Total produzido</span>
+              <a href="" class="_popover_basic" rel="popover" data-content="O Total produzido pode ser maior que a soma dos serviços listados na tabela abaixo, porque serviços sem comissão são somados como produzidos, apesar de não aparecerem na tabela. Fique atento também à opção relatório sintético, se a mesma estiver desmarcada o valor do serviço na tabela é replicado de acordo com a quantidade de formas de pagamento usadas pelo cliente, neste caso é provável que a soma dos serviços na tabela seja maior que o total produzido. Se a opção relatório sintético estiver marcada o relatório mostrará uma unica linha com o valor do serviço/produto." data-original-title="Informação">
                 <img width='20' src="/images/info.gif"/>
               </a>
             </div>
