--- a/src/main/webapp/financial_admin/commission_report_multiple.html
+++ b/src/main/webapp/financial_admin/commission_report_multiple.html
@@ -222,7 +222,7 @@
             <div class="lift:SecuritySnippet.isShowSalesToUser input-prepend" style="float:left; padding-right:10px">
               <span class="add-on"><img src="/images/money.png" width="16"></span>
               <input class="small" id="total" name="total" size="19" placeholder="0.00" type="text">
-              <span class="help-block">Total faturado</span>
+              <span class="help-block">Total produzido</span>
             </div>
             <div class="input-prepend" style="float:left; padding-right:10px">
               <span class="add-on"><img src="/images/user.png" width="16"></span>
