--- a/src/main/webapp/commission_conference_user.html
+++ b/src/main/webapp/commission_conference_user.html
@@ -6,7 +6,7 @@
               <span class="lift:CompanySnippet.thumb"> </span>Relatório de Conferência de Comissões
             </h1>
             <div class="clearfix">
-              <label for="start">Intervalo</label>
+              <label for="startDate">Intervalo</label>
               <div class="input">
                 <div class="inline-inputs">
                   <div class="input-prepend" style="float:left; padding-right:10px">
@@ -51,6 +51,16 @@
         <tbody>
         </tbody>
     </table>
+    <div class="clearfix lift:SecuritySnippet.isShowSalesToUser input-prepend">
+      <label for="total">Total Produzido</label>
+      <div class="input">
+        <div class="input-prepend">
+          <span class="add-on"><img src="/images/money.png" width="16"></span>
+          <input style="color:black;" class="mini disabled" disabled='true' id="total_prod" name="total_prod" size="30" type="text"/>
+          <span class="help-block">Valor produzido pelo <span data-i18n='Profissional'></span></span>
+        </div>
+      </div>
+    </div>
     <div class="clearfix">
       <label for="total">Total de Comissão</label>
       <div class="input">
