--- a/src/main/webapp/financial_admin/commission_report.html
+++ b/src/main/webapp/financial_admin/commission_report.html
@@ -31,13 +31,13 @@
     $("#unit").unitField(true);
     var hasUnitModule = $('.has-unit-module').length > 0;
     var hasAuxiliarModule = $('.has-auxiliar-module').length > 0;
-    $("#start").change();
-    $("#end").change();
+    $("#startDate").change();
+    $("#endDate").change();
     var startDate = function(){
-      return  encodeURIComponent($("#start").val() != "" ? $("#start").val() : getDateBr(new Date().getStartOfMonth()));
+      return  encodeURIComponent($("#startDate").val() != "" ? $("#startDate").val() : getDateBr(new Date().getStartOfMonth()));
     }
     var endDate = function(){
-      return encodeURIComponent($("#end").val() != "" ? $("#end").val() : getDateBr(new Date()));
+      return encodeURIComponent($("#endDate").val() != "" ? $("#endDate").val() : getDateBr(new Date()));
     }     
     var fields = [];
     if (!AuthUtil.company.showSalesToUser_$qmark) {
@@ -154,7 +154,7 @@
         });
         $.post("/report/commissions_fat", $("#form_report").serializeObject(), function(r){
           var total = parseFloat(eval(r)[0][0]);
-          $("#total").val((total).formatMoney());
+          $("#total_prod").val((total).formatMoney());
         });
       });
       if (future) {
@@ -186,16 +186,16 @@
       <div class="row">
         <div class="span8">
           <div class="clearfix">
-            <label for="start">Intervalo</label>
+            <label for="startDate">Intervalo</label>
               <div class="input">
                 <div class="inline-inputs">
                   <div class="input-prepend" style="float:left; padding-right:10px">
                     <span class="add-on"><img width="16" src="/images/calendar_addon.png"></span>
-                    <input type="text" class="input-small date to_day value_to_env" data-env-value="DTINI" id='start' name="start" placeholder="Início"/>
+                    <input type="text" class="input-small date to_day value_to_env" data-env-value="DTINI" id='startDate' name="startDate" placeholder="Início"/>
                   </div>
                   <div class="input-prepend" style="float:left; padding-right:10px">
                     <span class="add-on"><img width="16" src="/images/calendar_addon.png"></span>
-                    <input type="text" class="input-small date to_day value_to_env" data-env-value="DTFIM" id='end' name="end" placeholder="Fim"/>
+                    <input type="text" class="input-small date to_day value_to_env" data-env-value="DTFIM" id='endDate' name="endDate" placeholder="Fim"/>
                   </div>
                 </div>
               </div>
@@ -276,12 +276,12 @@
           </div>
       </div>
       <div class="clearfix">
-        <label for="start_date">Total </label>
+        <label for="total_commission">Total </label>
         <div class="input">
           <div class="inline-inputs">
             <div class="lift:SecuritySnippet.isShowSalesToUser input-prepend" style="float:left; padding-right:10px">
               <span class="add-on"><img src="/images/money.png" width="16"></span>
-              <input style="color:black;" class="small disabled" id="total" name="total" size="19" placeholder="0.00" type="text" disabled='true'>
+              <input style="color:black;" class="small disabled" id="total_prod" name="total_prod" size="19" placeholder="0.00" type="text" disabled='true'>
               <span class="help-block">Total produzido</span>
               <a href="" class="_popover_basic" rel="popover" data-content="O Total produzido pode ser maior que a soma dos serviços listados na tabela abaixo, porque serviços sem comissão são somados como produzidos, apesar de não aparecerem na tabela. Fique atento também à opção relatório sintético, se a mesma estiver desmarcada o valor do serviço na tabela é replicado de acordo com a quantidade de formas de pagamento usadas pelo cliente, neste caso é provável que a soma dos serviços na tabela seja maior que o total produzido. Se a opção relatório sintético estiver marcada o relatório mostrará uma unica linha com o valor do serviço/produto." data-original-title="Informação">
                 <img width='20' src="/images/info.gif"/>
