showing movementtype for user's accountpayable in commissions reports

--- a/src/main/webapp/commission_conference_user.html
+++ b/src/main/webapp/commission_conference_user.html
@@ -46,6 +46,7 @@
           <th>Categ</th>
           <th>Descrição</th>
           <th>Valor</th>
+          <th title="Entrada/Saída">Tipo</th>
           <th title="Valor agredado">Val Agr</th>
         </thead>
         <tbody>
