--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -259,7 +259,7 @@
         <th>Categoria</th>
         <th>Descrição</th>
         <th>Valor</th>
-        <th>Tipo</th>
+        <th title="Entrada/Saída">Tipo</th>
         <th>Paga?</th>
         <th title="Cliente, profissional, fornecedor">Parc</th>
         <th class="lift:SecuritySnippet.hasUnitModule">Unidade</th>
