--- a/src/main/webapp/financial_admin/commission_report_multiple.html
+++ b/src/main/webapp/financial_admin/commission_report_multiple.html
@@ -289,6 +289,8 @@
       <th>Categoria</th>
       <th>Descrição</th>
       <th>Valor</th>
+      <th title="Entrada/Saída">Tipo</th>
+      <th title="Valor agredado">Val Agr</th>
     </thead>
     <tbody>
     </tbody>
