--- a/src/main/webapp/financial_admin/commission_report.html
+++ b/src/main/webapp/financial_admin/commission_report.html
@@ -142,6 +142,8 @@
                 "<td>"+payment.category+"</td>" +
                 "<td>"+payment.obs+"</td>" + 
                 "<td>"+(payment.value).formatMoney()+"</td>" +
+                "<td><img src=\"/images/" + 
+                (obj.type === 0 ? 'add' : 'remove') + ".png\"/></td>" +
                 (payment.aggregateValue != 0 ? "<td>" + (payment.aggregateValue).formatMoney() + "</td>" : "<td>" + "</td>") + 
                 "</tr>";
               };
@@ -385,6 +387,7 @@
       <th>Categoria</th>
       <th>Descrição</th>
       <th>Valor</th>
+      <th title="Entrada/Saída">Tipo</th>
       <th title="Valor agredado">Val Agr</th>
     </thead>
     <tbody>
