commission report fix

--- a/src/main/webapp/financial_admin/commission_report.html
+++ b/src/main/webapp/financial_admin/commission_report.html
@@ -143,7 +143,7 @@
                 "<td>"+payment.obs+"</td>" + 
                 "<td>"+(payment.value).formatMoney()+"</td>" +
                 "<td><img src=\"/images/" + 
-                (obj.type === 0 ? 'add' : 'remove') + ".png\"/></td>" +
+                (payment.type === 0 ? 'add' : 'remove') + ".png\"/></td>" +
                 (payment.aggregateValue != 0 ? "<td>" + (payment.aggregateValue).formatMoney() + "</td>" : "<td>" + "</td>") + 
                 "</tr>";
               };
